--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^18.3.1",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-paginate": "^8.2.0",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "web-vitals": "^1.1.2"
   },
